<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
  <!--  <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_tab"
            android:title="@string/menu_profile"/>
    <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_order"/>
    <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_my_cart"
            android:title="@string/menu_my_cart"/>
    <item
            android:id="@+id/nav_my_rewords"
            android:icon="@drawable/ic_my_rewords"
            android:title="@string/menu_my_rewords"/>
    <item
            android:id="@+id/nav_account_setting"
            android:icon="@drawable/ic_account_setting"
            android:title="@string/menu_account_setting"/>
    <item
            android:id="@+id/nav_help_center"
            android:icon="@drawable/ic_help_center"
            android:title="@string/menu_help_center"/>
    <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>-->
    <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>
    <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_order"/>
    <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_my_cart"/>
    <item
            android:id="@+id/nav_my_rewords"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_my_rewords"/>
    <item
            android:id="@+id/nav_account_setting"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_account_setting"/>
    <item
            android:id="@+id/nav_help_center"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_help_center"/>
    <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_logout"/>
</menu>
