<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/spacing_standard_new"
    app:cardBackgroundColor="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_standard"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_standard_new"
            android:text="@string/lbl_change_pswd"
            android:textAppearance="@style/FontBold"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_size_xxlarge"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtOldPwd"
            style="@style/FieldRounded"
            android:hint="@string/hint_enter_old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtNewPwd"
            style="@style/FieldRounded"
            android:layout_marginTop="@dimen/spacing_middle"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtConfirmPwd"
            style="@style/FieldRounded"
            android:layout_marginTop="@dimen/spacing_middle"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangePassword"
            style="@style/MaterialButtonStyle.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_standard_new"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_standard_new"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/lbl_change_now"
            android:textSize="@dimen/font_size_medium" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>