<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/spacing_standard_new"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_standard">
        <TextView
            android:textAppearance="@style/FontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_standard_new"
            android:text="@string/lbl_change_pswd"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_size_xxlarge"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llOtp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/layout_otp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerify"
                style="@style/MaterialButtonStyle.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_standard_new"
                android:layout_marginBottom="@dimen/spacing_large"
                android:textSize="@dimen/font_size_medium"
                android:text="@string/lbl_verify_now" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llChangePswd"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtNewPassword"
                style="@style/FieldRounded"
                android:inputType="number"
                android:maxEms="12"
                android:maxLength="12"
                android:layout_marginTop="@dimen/spacing_middle"
                android:hint="@string/hint_new_password" />

            <EditText
                android:id="@+id/edtconfirmPassword"
                style="@style/FieldRounded"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/spacing_middle"
                android:hint="@string/hint_confirm_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChangePassword"
                style="@style/MaterialButtonStyle.Filled"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_standard_new"
                android:layout_marginBottom="@dimen/spacing_large"
                android:textSize="@dimen/font_size_medium"
                android:text="@string/lbl_change_now" />
        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>